Added card details
Addition of card, minor changes to HTML, SCSS changes

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <meta
       name="Bridges to Prosperity Site Map"
-      content="An application designed to display all the possible bridge sites in Rwanda as surveyed by Bridges to Propsperity and their current status."
+      content="An application designed to display all the locations of bridges built, as well as prospective locations inas surveyed by Bridges to Propsperity and their current status."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
